fixed collapsed margins

--- a/app/home/home.less
+++ b/app/home/home.less
@@ -1,7 +1,7 @@
 .ch-home {
   text-align: center;
   h1 {
-    margin-top: 35px;
+    padding-top: 35px;
   }
   
 }
