--- a/app/index/index.less
+++ b/app/index/index.less
@@ -1,11 +1,13 @@
 body {
   background-color: rgb(45, 45, 45);
-  margin-top: 50px;
+ .ch-container {
+   margin-top: 45px;
 
-  .ch-view {
-    min-height: 400px;
-    color: black;
-    background: rgb(235, 235, 235);
-    padding: 0 0 20px 0;
-  }
+   .ch-view {
+     min-height: 400px;
+     color: black;
+     background: rgb(235, 235, 235);
+     padding: 0 0 20px 0;
+   }
+ }
 }
