--- a/app/nav-bar/nav-bar.less
+++ b/app/nav-bar/nav-bar.less
@@ -6,7 +6,7 @@
   right: 0;
   left: 0;
   color: white;
-  min-height: 45px;
+  height: 45px;
   background-color: #2b2b2b;
 
   a {
